# oscar_prediction_market

./: .env  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/: copilot-instructions.md  python.instructions.md
oscar_prediction_market/: __init__.py  constants.py
oscar_prediction_market/data/: README.md  awards_calendar.py  build_dataset.py  dataset_report.py  fetch_omdb.py  fetch_precursor_awards.py  fetch_tmdb.py  oscar_winners.py  precursor_mappings.py  schema.py  utils.py
oscar_prediction_market/modeling/: README.md  __init__.py  build_model.py  calibration.py  cv_splitting.py  data_loader.py  evaluate_cv.py  evaluation.py  generate_feature_ablation_configs.py  generate_tuning_configs.py  hyperparameter_tuning.py  prediction_io.py  train_predict.py  utils.py
oscar_prediction_market/one_offs/: experiment_index.md  legacy_snapshot_loading.py  sync_assets.sh
oscar_prediction_market/trading/: README.md  __init__.py  backtest.py  backtest_configs.py  edge.py  inspect_trade.py  kalshi_client.py  kelly.py  name_matching.py  oscar_data.py  oscar_market.py  oscar_moments.py  oscar_prediction_source.py  portfolio.py  schema.py  signals.py  temporal_model.py
tests/: __init__.py
tests/data/: test_awards_calendar.py  test_fetch_precursor_awards.py
tests/modeling/: conftest.py  test_feature_engineering.py
tests/trading/: conftest.py  test_backtest.py  test_build_trading_moments.py  test_edge.py  test_execution.py  test_fees.py  test_inspect_trade.py  test_kelly.py  test_name_matching.py  test_oscar_prediction_source.py  test_portfolio.py  test_portfolio_simulation.py  test_signal_delay.py  test_signals.py  test_spread.py  test_temporal_model.py
(+223 files in other folders)
